UX: last-seen input alignment fix

--- a/app/assets/stylesheets/common/admin/admin_base.scss
+++ b/app/assets/stylesheets/common/admin/admin_base.scss
@@ -626,7 +626,7 @@ $mobile-breakpoint: 700px;
     margin-right: 5px;
   }
   #last-seen input[type="text"] {
-    float: none;
+    margin-bottom: 0;
   }
   .pull-right {
     padding-right: 10px;
